# herald

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.example.toml  dist-workspace.toml  release-plz.toml
.cargo/: config.toml
.github/workflows/: aur-publish.yml  ci.yml  hermes-dispatch.yml  release.yml
crate-stalwart-rs/: Cargo.toml
crate-stalwart-rs/src/: lib.rs  oauth.rs
crate-stalwart-rs/src/oauth/: browser.rs  device.rs  mod.rs  pkce.rs  types.rs
docs/: architecture-security-review.md  tui-spec.md
packaging/aur/herald-jmap-cli-bin/: PKGBUILD
packaging/aur/herald-jmap-cli-git/: LICENSE  PKGBUILD
src/: auth.rs  config.rs  main.rs  output.rs  secret.rs  text.rs  validate.rs
src/commands/: auth.rs  calendar.rs  config.rs  contacts.rs  mail.rs  mod.rs
src/commands/mail/: list.rs  mod.rs  read.rs  send.rs  watch.rs
src/config/: error.rs  mod.rs  profile.rs  tests.rs
src/jmap/: calendar.rs  contacts.rs  mail.rs  mod.rs  push.rs
src/tui/: actions.rs  app.rs  data.rs  editor.rs  entries.rs  event.rs  keymap.rs  messages.rs  mod.rs  overlay.rs  popout.rs  render.rs  search.rs  state.rs  statusbar.rs  types.rs  worker.rs
src/tui/model/: folders.rs  form.rs  mod.rs  month.rs  window.rs
src/tui/screens/: calendar.rs  contacts.rs  mail.rs  mod.rs
src/tui/ui/: input.rs  layout.rs  mod.rs  preview.rs  results.rs
