[package]
name = "stalwart-rs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Stalwart Mail Server OAuth PKCE, device flow, and admin API extensions"
repository = "https://github.com/BernhardRode/herald"
keywords = ["stalwart", "oauth", "jmap"]
categories = ["authentication"]

[dependencies]
jmap-base-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
open = "5"
